--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,3 +7,6 @@ en:
      long_date: %A, %b %d %Y
      short_date: %B %d, %Y
      date_with_time: %A, %b %d %Y at %H:%M
+ errors:
+    messages:
+     email: "Not an email address"
